--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,14 @@
   "description": "Backend for task app",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node index.js",
-    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "build:ui": "rm -rf build && cd ../client/ && npm run build && cp -r build ../server",
     "deploy": "flyctl deploy",
     "deploy:full": "npm run build:ui && npm run deploy",
     "logs:prod": "flyctl logs",
     "open": "flyctl open",
-    "test": "cross-env NODE_ENV=test jest --verbose --runInBand"
+    "test": "jest --verbose --runInBand"
   },
   "repository": {
     "type": "git",
